--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
     "name": "activity-api",
     "version": "1.0.0",
+    "type": "module",
     "private": true,
     "scripts": {
         "dev": "vercel dev",
