--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "type": "module",
     "private": true,
     "scripts": {
+        "build": "node scripts/check-db.js",
         "dev": "vercel dev",
         "deploy": "vercel --prod"
     },
