--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,12 @@
 {
     "version": 2,
     "buildCommand": "npm run build",
-    "builds": [
-        {
-            "src": "api/**/*.js",
-            "use": "@vercel/node"
+    "outputDirectory": ".",
+    "functions": {
+        "api/**/*.js": {
+            "runtime": "@vercel/node@3"
         }
-    ],
+    },
     "routes": [
         {
             "src": "/api/(.*)",
