--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,10 @@
 {
     "version": 2,
     "buildCommand": "npm run build",
-    "outputDirectory": ".",
     "functions": {
-        "api/**/*.js": {
-            "runtime": "@vercel/node@3"
+        "api/*.js": {
+            "memory": 128,
+            "maxDuration": 10
         }
-    },
-    "routes": [
-        {
-            "src": "/api/(.*)",
-            "dest": "/api/$1"
-        }
-    ]
+    }
 }
