--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,9 @@
 {
     "version": 2,
-    "functions": {
-        "api/*.js": {
-            "memory": 128,
-            "maxDuration": 10
+    "builds": [
+        {
+            "src": "api/**/*.js",
+            "use": "@vercel/node"
         }
-    }
+    ]
 }
